# kaya

./: CMakeLists.txt  package.xml
config/: view_bot.rviz
description/: robot.urdf.xacro  robot_core.xacro
launch/: rsp.launch.py
